<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Detail.DetailActivity"
    android:background="@drawable/background">
    <RelativeLayout
        android:id="@+id/rl_detail_search"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:cardCornerRadius="8dp">

            <EditText
                android:textDirection="rtl"
                android:id="@+id/edt_detail_search"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:hint="@string/edt_main_hint_search" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_detail_search"
        android:layout_above="@id/nav_detail_btnNav">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
           <ImageView
               android:layout_width="match_parent"
               android:layout_height="200dp"
               android:id="@+id/img_detail_image"
               android:scaleType="fitCenter"
               tools:src="@drawable/cactus1"/>
            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/img_detail_image"
                android:layout_margin="8dp"
                app:cardCornerRadius="8dp"
                app:cardBackgroundColor="@color/Grey50">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:text="@string/txt_detail_name"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:id="@+id/txt_detail_titleName"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleName"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/txt_detail_name"
                        tools:text="@string/txt_main_cactus"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:text="@string/txt_detail_introduction"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:id="@+id/txt_detail_titleIntroduction"
                        android:layout_below="@id/txt_detail_name"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleIntroduction"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/txt_detail_introduction"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:text="@string/txt_detail_titleMaintenance"
                        android:textSize="18sp"
                        android:textColor="@color/black"
                        android:id="@+id/txt_detail_titleMaintenance"
                        android:layout_below="@id/txt_detail_introduction"
                        android:background="@drawable/shape_background_title"
                        android:padding="3dp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleMaintenance"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="8dp"
                        android:id="@+id/txt_detail_titleLight"
                        android:text="@string/txt_detail_light"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleLight"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/txt_detail_light"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_light"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titleWater"
                        android:text="@string/txt_detail_water"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleWater"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/txt_detail_water"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_water"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titleSoil"
                        android:text="@string/txt_detail_soil"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleSoil"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/txt_detail_soil"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_soil"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titleFertilizer"
                        android:text="@string/txt_detail_fertilizer"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleFertilizer"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/txt_detail_fertilizer"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_fertilizer"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titlePests"
                        android:text="@string/txt_detail_pests"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titlePests"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:id="@+id/txt_detail_pests"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_pests"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titleToxic"
                        android:text="@string/txt_detail_toxic"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleToxic"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/txt_detail_toxic"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_toxic"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titleTemperate"
                        android:text="@string/txt_detail_temperate"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleTemperate"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/txt_detail_temperate"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_temperate"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titleReproduction"
                        android:text="@string/txt_detail_reproduction"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleReproduction"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/txt_detail_reproduction"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_reproduction"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titlePrune"
                        android:text="@string/txt_detail_prune"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titlePrune"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/txt_detail_prune"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_prune"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titleHumidity"
                        android:text="@string/txt_detail_humidity"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleHumidity"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/txt_detail_humidity"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_humidity"
                        android:layout_alignParentEnd="true"
                        android:layout_margin="8dp"
                        android:id="@+id/txt_detail_titleFurtherInfo"
                        android:text="@string/txt_detail_furtherInfo"
                        android:textSize="18sp"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_titleFurtherInfo"
                        android:layout_alignParentEnd="true"
                        android:layout_marginEnd="16dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginBottom="16dp"
                        android:id="@+id/txt_detail_furtherInfo"
                        tools:text="@string/txt_itemRecycler_tools_introduction"
                        android:textSize="14sp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txt_detail_furtherInfo"
                        android:id="@+id/img_detail_fav"
                        android:src="@drawable/ic_diselect_favorite_24"
                        android:layout_margin="8dp"
                        android:clickable="true"
                        android:focusable="true"/>


                </RelativeLayout>

            </com.google.android.material.card.MaterialCardView>
        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/nav_detail_btnNav"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@color/blackOp"
        app:itemIconTint="@color/white"
        app:itemTextColor="@color/white"
        app:menu="@menu/menu" />
</RelativeLayout>